# rust_iot_gateway

./: .env  .env.example  Cargo.toml  Dockerfile  Dockerfile.simulator  README.md  compose.simulators.yml  fly.toml
arduino_sketches/esp8266_sketch_dht11_light_sensors/: esp8266_sketch_dht11_light_sensors.ino
migrations/: 0001_initial.sql
src/: main.rs
